fixed nav bar and general alignment

--- a/app/assets/stylesheets/components/_search_bar.scss
+++ b/app/assets/stylesheets/components/_search_bar.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 30px;
+  margin: 10px;
 }
 
 .search-bar input[type="text"] {
